--- a/settings/IFS_CY49R1.toml
+++ b/settings/IFS_CY49R1.toml
@@ -1,25 +1,25 @@
-
-##############################################################################################################################
-# Settings file for to create ifs-netcdf for IFS CY48R1                                                                      #
-#                                                                                                                            #
-#                                                                                                                            #
-# INFO:  The file has an the following sections:                                                                             #
-#       1. default           => here few defaults values can be set up                                                       #
-#       2. species           => core of the settings: each species has a config file, and engine and a ncname for the output #
-#                               if engine or ncname is set up as default the default section will be used.                   #
-#       3. Processing        => here is where we indicate the process for an specific calculation. It has to parts:          #
-#          3.1 process       => here we indicate which single aerosols should be processed and which mixed aerosols.         #
-#                               for this we will just use the names of the fields in [species]                               #
-#          3.2 ifs           => section describing the information to build propertly the ifs-netcdf file                    #
-#          3.2 info          => here we can add information to the final netcdfs as global attribute (metadata).             #
-#                                                                                                                            #
-# Version:                                                                                                                   #
-#   1.0.0  Jul-2023                                                                                                          #
-#                                                                                                                            #
-# Contact: Ramiro Checa-Garcia                                                                                               #
-#          ramiro.checa-garcia@ecmwf.int                                                                                     #
-##############################################################################################################################
-
+#  +--------------------------------------------------------------------------------------------------------------------------------+
+#  |                                                                                                                                |
+#  | Settings file for to create ifs-netcdf for IFS CY48R1                                                                          |
+#  |                                                                                                                                |
+#  |                                                                                                                                |
+#  | INFO:  The file has an the following sections:                                                                                 |
+#  |       1. default           => here few defaults values can be set up                                                           |
+#  |       2. species           => core of the settings: each species has a config file, and engine and a ncname for the output     |
+#  |                               if engine or ncname is set up as default the default section will be used.                       |
+#  |       3. Processing        => here is where we indicate the process for an specific calculation. It has to parts:              |
+#  |          3.1 process       => here we indicate which single aerosols should be processed and which mixed aerosols.             |
+#  |                               for this we will just use the names of the fields in [species]                                   |
+#  |          3.2 ifs           => section describing the information to build propertly the ifs-netcdf file                        |
+#  |          3.2 info          => here we can add information to the final netcdfs as global attribute (metadata).                 |
+#  |                                                                                                                                |
+#  | Version:                                                                                                                       |
+#  |   1.0.0  Jul-2023                                                                                                              |
+#  |                                                                                                                                |
+#  | Contact: Ramiro Checa-Garcia                                                                                                   |
+#  |          ramiro.checa-garcia@ecmwf.int                                                                                         |
+#  |                                                                                                                                |
+#  +--------------------------------------------------------------------------------------------------------------------------------+
 
 
 # DEFAULTs SECTION ===========================================================================================================
@@ -27,14 +27,15 @@
 # specific information in the config files or in the process section
 
 [default]
-wavelengths = "data/wavelengths/wl_out_TEST_15.txt"     # indicates the default wavelengths for output files this
+wavelengths = "data/wavelengths/wl_out_IFS.txt"     # indicates the default wavelengths for output files this
                                                     # will override the value in the configuration files!!
                                                     # if you want to keep conf. files value remove this.
 
 engine      = "mie"                   # indicates the default code to calculate the optical properties
 
-nangle      = 20                                    # =0          -> no phase function calculated
+nangle      = [-180, 180, 10]                       # =0          -> no phase function calculated
                                                     # =n          -> number of equistant angles for phase function
+						    # =[a,b,c]    -> c values between a and b.
                                                     # ="filename" -> read angles from file
 
 ncname      = ["C:aer_type",  "C:today",            # C: means that the string after C: will be find in config files
@@ -103,7 +104,7 @@ organic.soot = { config = "data/config_toml/config_organic_soot.toml"  , engine=
 [process]
 
 skip=false
-plt=true
+plt=false
 
 # For processing single aerosols you can add them here (we are adding the names in species section)
 single = [ "ss",                                     # Sea-Salt
@@ -122,6 +123,7 @@ single = [ "ss",                                     # Sea-Salt
 mixing.organic.conf      = "organic"                             # This will process the composite species organic
 mixing.organic.ncname    = ["organic", "optics_IFS", "C:today"]  # here we have to specific the final name MANDATORY
 mixing.organic.opt_model = "OPAC"
+
 [ifs]
 # Now we give some rules to build a single IFS netcdf. 
 # We define here a table with the information needed. The aer.XX, XX is the tag of the aerosol.
@@ -131,7 +133,7 @@ mixing.organic.opt_model = "OPAC"
 # where to place them. All other should be filled with missing or nan.
 
 ifs_cycle  = "49R1"
-netcdfname = "standard"  #"outputnc/store_ifsnc/aerosols_ifs_CY49R1_v3.nc"
+netcdfname = "test10.nc" #"standard"  #"outputnc/store_ifsnc/aerosols_ifs_CY49R1_v3.nc"
 
 number     = { philic=19, phobic=19}
 
